--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="bannerContent">
                 <h3 class="bannerGreeting">Hi, I  am</h3>
                 <h1 class="bannerTitle">Mary Hardy</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btnPrimary">Download CV</button>
+                <button class="btnPrimary">Contact</button>
             </div>
+            <img class="profilePic" src="images/hardy.png" alt="">
         </div>
     </header>
     <main></main>
