--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="bannerContent">
                 <h3 class="bannerGreeting">Hi, I  am</h3>
                 <h1 class="bannerTitle">Mary Hardy</h1>
-                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="bannerDescription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btnPrimary">Download CV</button>
                 <button class="btnPrimary">Contact</button>
             </div>
