--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
                 </div>
             </div>
         </section>
+        <!-- "What I Do" section starts from here -->
+        <section>
+            <h3 class="sectionTitle">What I Do</h3>
+            <p id="whatIDo" class="sectionDescription">
+                I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+            </p>
+            <div class="skillsContainer">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skillTitle">Vanilla Javascript</h3>
+                    <p class="skillDescription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skillTitle">React</h3>
+                    <p class="skillDescription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skillTitle">Node.js</h3>
+                    <p class="skillDescription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skillTitle">MongoDB</h3>
+                    <p class="skillDescription">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
