--- a/index.html
+++ b/index.html
@@ -79,6 +79,58 @@
                 </div>
             </div>
         </section>
+        <!-- Resume Section -->
+        <section>
+            <h3 class="sectionTitle">A summary of My Resume</h3>
+            <div class="resumeContainer">
+                <div class="resumeColumn">
+                    <h3 class="resumeColumnTitle">My Education</h3>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resumeColumn">
+                    <h3 class="resumeColumnTitle">My Experience</h3>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resumeItem">
+                        <h2 class="resumeItemTitle">Master in Computer Engineering</h2>
+                        <h3 class="resumeItemInstitute">Harvard University / 2015 - 2017</h3>
+                        <p class="resumeItemDescription">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
