Successfully build a portfolio website

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
         </div>
         <div class="footerColumn">
             <h3 class="sectionTitle">Let's Message Me</h3>
+            <form class="contact">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btnPrimary" type="submit" value="Submit">
+            </form>
         </div>
     </footer>
 </body>
