--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
         </div>
         <div class="footerColumn">
-            <h3 class="sectionTitle">Let's Message Me</h3>
+            <h3 class="sectionTitle">Let's Message Me, Right Now.</h3>
             <form class="contact">
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
