--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/566a4837f4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -21,8 +22,8 @@
                 <h3 class="bannerGreeting">Hi, I  am</h3>
                 <h1 class="bannerTitle">Mary Hardy</h1>
                 <p class="bannerDescription">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btnPrimary">Download CV</button>
-                <button class="btnPrimary">Contact</button>
+                <button class="btnPrimary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btnPrimary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profilePic" src="images/hardy.png" alt="">
         </div>
@@ -131,7 +132,7 @@
                 </div>
             </div>
             <div class="downloadCV">
-                <button class="btnPrimary">Download CV</button>
+                <button class="btnPrimary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
