--- a/practiceTaskOne.html
+++ b/practiceTaskOne.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header>
-        <h2>All Thinks Are Possible If You believe</h2>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <div class="firstDiv">
+            <h2>All Thinks Are Possible If You believe</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button>Contact Us</button>
+        </div>
     </header>
 </body>
 </html>
